--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -158,6 +158,9 @@ $max-width: $x-large !default;
 $right-sidebar-width-narrow: 100px !default; //default 200px
 $right-sidebar-width: 200px !default;        //deafult 300px
 $right-sidebar-width-wide: 250px !default;   //deafult 400px
+$left-sidebar-width-narrow: 100px !default; //default 200px
+$left-sidebar-width: 200px !default;        //deafult 300px
+$left-sidebar-width-wide: 250px !default;   //deafult 400px
 
 /*
    Other
